[package]
name = "bahamut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json","cookies"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
rand = "0.8"
serde_json = "1.0"
async-recursion = "1.0"
regex = "1.6.0"